--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         </div>
     </details>
 </div>
-<img width=100% src=”https://capsule-render.vercel.app/api?type=waving&color=023e8a&height=120&section=footer”/>
+<img width=100% src="https://capsule-render.vercel.app/api?type=waving&color=023e8a&height=120&section=footer"/>
     </body>
 </html>
