--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <body style="background-color: #232323">
         <img width="100%" src="https://capsule-render.vercel.app/api?type=waving&color=023e8a&height=120&section=header"/>
 
-<div style="justify-content: center;">
+<div style="justify-content: center; color: white;">
     <h1>Welcome to my webapps!!!</h1>
     <p>In this place, do you can view a loot of my projects made in Html, javascript and css! <br>I made these projects, with intention for showing a bit of my capacity, in my portfolio</p>
     <br>
     <h2>bellow has some projects i did</h2>
     <details>
         <summary>Look at this</summary>
-        <div style="justify-content: start;">
+        <div style="justify-content: start; color: white;">
             <a href="https://felpzsouls.github.io/webapps/age-calculator">age calculator</a><br>
             <a href="https://felpzsouls.github.io/webapps/clock">a clock</a><br>
             <a href="https://felpzsouls.github.io/webapps/dark-mode">changing for the dark</a><br>
