--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://felpzsouls.github.io/webapps/love">the dating request</a><br>
             <a href="https://felpzsouls.github.io/webapps/pokedex">kanto's pokedex</a><br>
             <a href="https://felpzsouls.github.io/webapps/stopwatch">a stopwatch</a><br>
-            <a href="https://felpzsouls.github.io/webapps/task-list">a to-do list</a><br>
+            <a href="https://felpzsouls.github.io/webapps/task%20list">a to-do list</a><br>
         </div>
     </details>
 </div>
