--- a/game/finalMessage.html
+++ b/game/finalMessage.html
@@ -13,6 +13,7 @@
         <p>Colete a inicial de cada resposta para formar a frase</p>
         <div id="wordDisplay"></div>
         <input type="text" id="hiddenInput" autocomplete="off" autocorrect="off" spellcheck="false">
+        <div id="keyboard"></div> <!-- Adicionando o teclado virtual -->
         <p id="messageOutput"></p>
     </div>
     <script src="script/final.js"></script>
