--- a/laressa/index.html
+++ b/laressa/index.html
@@ -19,7 +19,7 @@
         <h1>Luis ❤ Laressa</h1>
         <p>O tempo passa, mas meu amor por você só cresce.</p>
         <div class="gif-container">
-            <img onclick="showToast()" src="pato.gif" alt="Pato andando" class="gif">
+            <img onclick="showToast()" src="pata.gif" alt="Pato andando" class="gif">
         </div>
         <div class="contador" id="contador"></div>
         <div class="music-section">
